--- a/Street Art Map/Base.lproj/Main.storyboard
+++ b/Street Art Map/Base.lproj/Main.storyboard
@@ -249,6 +249,7 @@
                             <outlet property="delegate" destination="eDo-LD-hrY" id="clO-Pb-Qfg"/>
                         </connections>
                     </tableView>
+                    <tabBarItem key="tabBarItem" title="Artists" id="eXr-o8-oP9"/>
                     <navigationItem key="navigationItem" title="Select Artist" id="Bxq-t7-XBL">
                         <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Aat-DB-dZo">
                             <connections>
@@ -265,7 +266,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nFw-ta-QAQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="Nyu-kv-8qo" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="4899" y="-389"/>
+            <point key="canvasLocation" x="4041" y="1283"/>
         </scene>
         <!--Map-->
         <scene sceneID="OVU-LX-8tc">
@@ -302,11 +303,12 @@
                     <connections>
                         <segue destination="tvb-ZD-r09" kind="relationship" relationship="viewControllers" id="bgq-Cp-NdU"/>
                         <segue destination="o7h-Zt-ENc" kind="relationship" relationship="viewControllers" id="r7S-2F-uIt"/>
+                        <segue destination="UK2-9Z-QMn" kind="relationship" relationship="viewControllers" id="el0-uU-6fE"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="krG-Yq-mhd" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="309" y="-37"/>
+            <point key="canvasLocation" x="-29" y="625"/>
         </scene>
         <!--Map-->
         <scene sceneID="gfD-F5-0ew">
@@ -345,10 +347,11 @@
             </objects>
             <point key="canvasLocation" x="2581" y="-389"/>
         </scene>
-        <!--Navigation Controller-->
+        <!--Item-->
         <scene sceneID="4hU-Ov-3Lh">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="UK2-9Z-QMn" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="qtB-Tz-Oj9"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="pCv-Ss-l3I">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
@@ -361,10 +364,11 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="F75-Ob-bim" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4087" y="-389"/>
+            <point key="canvasLocation" x="3361" y="1275"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
+        <segue reference="el0-uU-6fE"/>
         <segue reference="3dA-IQ-B8v"/>
     </inferredMetricsTieBreakers>
 </document>
